--- a/style.css
+++ b/style.css
@@ -34,10 +34,10 @@ li a{
     margin-right: 25px;
 }
 li a:hover{
-    background-color: grey;
+    background-color: white;
 }
 button{
-    background-color:  #ff5e13  ; 
+see    background-color:  pink  ; 
     margin-left: 15px; 
     border-radius: 10px; 
     padding: 10px; 
@@ -49,7 +49,7 @@ button a{
     font-size: 15px;
 }
 button a:hover{
-    background-color: grey;
+    background-color: white;
 }
 .content{
     color: white;
@@ -93,7 +93,7 @@ p,h1 {
     .nav-links {
         display: none;
         flex-direction: column;
-        background-color: lightblue;
+        background-color: pink;
         position: absolute;
         top: 60px;
         left: 0;
